--- a/newtab.html
+++ b/newtab.html
@@ -114,7 +114,7 @@ a:link, a:visited {
 				<ul>
 				  <li><a href="https://www.youtube.com/">Youtube</a></li>
 				  <li><a href="https://www.twitch.tv">Twitch</a></li>
-				  <li><a href="https://www.twitter.tv">X</a></li>
+				  <li><a href="https://www.twitter.">X</a></li>
 				</ul>
 			  </details>
 			</li>
@@ -132,6 +132,8 @@ a:link, a:visited {
 				<ul>
 				  <li><a href="https://www.kanttiinit.fi">Kanttiinit</a></li>
 				  <li><a href="https://www.microsoft.com/en-us/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook?deeplink=%2fowa%2f&sdf=0">Outlook</a></li>
+				  <li><a href="https://chat.openai.com/">ChatGPT</a></li>
+				  <li><a href="https://calendar.google.com">Calendar</a></li>
 				</ul>
 			  </details>
 			</li>
