--- a/newtab.html
+++ b/newtab.html
@@ -114,7 +114,7 @@ a:link, a:visited {
 				<ul>
 				  <li><a href="https://www.youtube.com/">Youtube</a></li>
 				  <li><a href="https://www.twitch.tv">Twitch</a></li>
-				  <li><a href="https://www.twitter.">X</a></li>
+				  <li><a href="https://www.twitter.com">X</a></li>
 				</ul>
 			  </details>
 			</li>
