--- a/newtab.html
+++ b/newtab.html
@@ -114,10 +114,21 @@ a:link, a:visited {
 				<ul>
 				  <li><a href="https://www.youtube.com/">Youtube</a></li>
 				  <li><a href="https://www.twitch.tv">Twitch</a></li>
-				  <li><a href="https://jellyfin.edthu.duckdns.org">Jellyfin</a></li>
 				  <li><a href="https://www.twitter.com">X</a></li>
 				</ul>
 			  </details>
+			</li>
+			<li>
+			  <details open>
+				<summary>Server</summary>
+				<ul>
+				  <li><a href="https://nginx.edthu.duckdns.org">Nginx</a></li>
+				  <li><a href="https://navidrome.edthu.duckdns.org">Navidrome</a></li>
+				  <li><a href="https://jellyfin.edthu.duckdns.org">Jellyfin</a></li>
+				  <li><a href="https://sonarr.edthu.duckdns.org">Sonarr</a></li>
+				  <li><a href="https://prowlarr.edthu.duckdns.org">Prowlarr</a></li>
+				  <li><a href="https://deluge.edthu.duckdns.org">Deluge</a></li>
+				</ul>
 			</li>
 			<li>
 			  <details open>
@@ -133,7 +144,7 @@ a:link, a:visited {
 				<ul>
 				  <li><a href="https://www.kanttiinit.fi">Kanttiinit</a></li>
 				  <li><a href="https://www.microsoft.com/en-us/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook?deeplink=%2fowa%2f&sdf=0">Outlook</a></li>
-				  <li><a href="https://chat.openai.com/">ChatGPT</a></li>
+				  <li><a href="https://claude.ai">Claude</a></li>
 				  <li><a href="https://calendar.google.com">Calendar</a></li>
 				</ul>
 			  </details>
